Flush out the GEP

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -1,11 +1,11 @@
 # GEP-1713: Standard Mechanism to Merge Multiple Gateways
 
-* Issue: [#1713/kubernetes-sigs/gateway-api/issues/1713)
+* Issue: [#1713](/kubernetes-sigs/gateway-api/issues/1713)
 * Status: Provisional
 
 (See status definitions [here](overview.md#status).)
 
-## TLDR
+## tl;dr
 
 The Gateway Resource is a contention point since it is the only place to attach listeners with certificates. We propose a mechanism to allow distinct Gateway resources to be logically merged.
 
@@ -25,12 +25,101 @@ Knative generates on demand per-service certificates using HTTP-01 challenges. T
 The spec currently has language to indicate implemenations `MAY` merge Gateways resources but the mechanic isn't defined. 
 https://github.com/kubernetes-sigs/gateway-api/blob/541e9fc2b3c2f62915cb58dc0ee5e43e4096b3e2/apis/v1beta1/gateway_types.go#L76-L78
 
-## Future Requirement Level
-
-We want to keep this API very simple so that the merging requirement level could increase from `MAY` to `MUST`
-
 ## API
 
+We propose adding a new `infrastructure` stanza to the `spec` field of a Gateway. Within `infrastructure` there is an `attachTo` field of type `LocalObjectReference`. Although the use of `LocalObjectReference` allows users to attach to any `kind`, this GEP only defines the behaviour of attaching a Gateway to another Gateway.
+
+
+See [GEP-1867](https://github.com/kubernetes-sigs/gateway-api/pull/1868) for more use cases of `infrastructure`.
+
+#### Go
+
+```go
+type GatewaySpec struct {
+  // Infrastructure defines infrastructure level attributes about this Gateway instance.
+  Infrastructure GatewayInfrastructure `json:"infrastructure"`
+  // ...
+}
+
+type GatewayInfrastructure struct {
+  // AttachTo allows the Gateway to associate itself with another resource.
+  // A common scenario is to reference another Gateway which marks
+  // this Gateway a child of another.
+  AttachTo LocalObjectReference `json:"attachTo"`
+}
+```
+
+#### YAML
+```yaml
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: Gateway
+metadata:
+  name: child-gateway
+  labels:
+    gateway.networking.k8s.io/parent-gateway: parent-gateway
+spec:
+  gatewayClassName: example
+  infrastructure:
+    attachTo:
+      name: parent-gateway
+      kind: Gateway
+      group: gateway.networking.k8s.io
+  listeners:
+  - name: metrics
+    port: 8080
+    protocol: HTTP
+```
+
+### Semantics
+
+
+#### Gateway Attaching
+
+Gateways that _do not_ reference another Gateway (using `spec.infrastructure.attachTo`) are considered "primary" Gateways. A "child" Gateway is one where `spec.infrastructure.attachTo` field is set to a "primary" Gateway. A "sibling" is a Gateway that shares a "parent" with another "child" Gateway.
+
+
+Failure to attach a "child" Gateway to another MUST result in the "child" Gateway setting their `Accepted` condition to `False`. This MUST happen in the following scenarios:
+- Attaching to another "child" Gateway
+- Attaching to oneself (self-referential)
+- Attaching to a non-existing Gateway
+- Attaching to a Gateway with a different `GatewayClassName` 
+
+#### Route Attaching
+
+Routes MUST be able to specify a "child" Gateways as a `parentRef` and make use of the fields in `ParentReference` to help target a specific listener.
+
+
+```yaml
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: HTTPRoute
+metadata:
+  name: httproute-example
+spec:
+  parentRefs:
+  - name: acme-lb
+    sectionName: https
+```
+
+#### `parent-gateway` label
+
+Implementations MUST label "child" Gateways with the `gateway.networking.k8s.io/parent-gateway` label. The value of the label is the name of the "parent" Gateway and it MUST be equivalent to the value `spec.infrastructure.attachTo.name`
+
+Users MUST NOT be able to edit this field.
+
+#### Merging Spec Fields
+
+
+#### GatewayClassName 
+
+The `GatewayClassName` MUST be set on "child" and "primary" Gateways and be equivalent.
+
+#### Listeners
+
+Implementations MUST treat the "primary" Gateway as having the concatenated list of all listeners from "child" Gateways.
+
+Validation of this list of listeners is subject to the discussion here: https://github.com/kubernetes-sigs/gateway-api/issues/1842
+
+eg.
 ```yaml
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
@@ -39,9 +128,9 @@ metadata:
 spec:
   gatewayClassName: example
   listeners:
-  - name: default
+  - name: HTTP
     port: 80
-    protocol: HTTP
+    protocol: HTTP 
 ---
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
@@ -51,22 +140,47 @@ metadata:
     gateway.networking.k8s.io/parent-gateway: parent-gateway
 spec:
   gatewayClassName: example
-  parentGateway: parent-gateway
+  infrastructure:
+    attachTo:
+      name: parent-gateway
+      kind: Gateway
+      group: gateway.networking.k8s.io
   listeners:
   - name: metrics
     port: 8080
-    protocol: HTTP
+    protocol: HTTP    
 ```
 
-With this configuration, an implementation:
-* This introduces a new concept in Gateway merging of a "primary" Gateway. 
-* `MUST` treat the `parentGateway` as having the concatenated list of all listeners from merged Gateways.
-  This means, for example, that a Service with port 80 and 443 may be created in this example.
-* This makes it explicit which is the primary gateway and which are attached to it.
-* Secondary Gateways cannot configure `addresses` and must have the same `gatewayClassName` as the primary Gateway they are attached to. 
-* Gateways can only reference a primary Gateway. That is, we cannot have a chain of references.
-* A common webhook will default the `gateway.networking.k8s.io/parent-gateway` label to make it easy for implementations to label selector lookups
-* Each `Gateway` will only list listeners in their status if there is a corresponding entry in their spec.
+With this configuration, the realized "primary" Gateway should listen on port `80` and `8080`.
+
+
+#### Addresses
+
+Merging `Addresses` is not supported and the "child" Gateway's `Addresses` MUST be empty.
+
+
+### Status Fields
+
+
+#### Addresses
+
+The list of `Addresses` that appear in the status of the "child" Gateway MUST be the same as the "parent" Gateway.
+
+#### Listeners
+
+The "child" Gateway MUST provide a status for each Listener defined in their specification. Listeners defined in "sibling" and the "parent" Gateway SHOULD NOT appear on a "child" Gateway.
+
+#### Conditions
+
+"Child" Gateways MUST support the same types of status conditions as "parent" Gateways.
+
+
+## Future Goals 
+
+### Requirement Level
+
+We want to keep this API very simple so that the merging requirement level could increase from `MAY` to `MUST`
+
 
 ## Alternatives
 
@@ -91,7 +205,7 @@ status: ...
 
 #### Use of the `gateway.networking.k8s.io/parent-gateway` label
 
-We could drop the `parentGateway` in the `spec` and just leverage the use of a label to signal a parent-child relationship.
+Use of the label could be used to select child gateways vs using `spec.infrastructure.attachTo`
 
 ## References
 Mentioned in Prior GEPs:
@@ -100,4 +214,5 @@ Mentioned in Prior GEPs:
 Prior Discussions: 
 - https://github.com/kubernetes-sigs/gateway-api/discussions/1248
 - https://github.com/kubernetes-sigs/gateway-api/discussions/1246
+
 
