--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -22,7 +22,7 @@ The Gateway Resource is a contention point since it is the only place to attach 
 
 Knative generates on demand per-service certificates using HTTP-01 challenges. There can be O(1000) Knative Services in the cluster which means we have O(1000) distinct certificates. Thus updating a single Gateway resource with this many certificates is a contention point and inhibits horizontal scaling of our controllers.
 
-The spec currently has language to indicate implemenations `MAY` merge Gateways resources but the mechanic isn't defined. 
+The spec currently has language to indicate implementations `MAY` merge Gateways resources but the mechanic isn't defined.
 https://github.com/kubernetes-sigs/gateway-api/blob/541e9fc2b3c2f62915cb58dc0ee5e43e4096b3e2/apis/v1beta1/gateway_types.go#L76-L78
 
 ## API
@@ -168,7 +168,7 @@ The list of `Addresses` that appear in the status of the "child" Gateway MUST be
 
 #### Listeners
 
-The "child" Gateway MUST provide a status for each Listener defined in their specification. Listeners defined in "sibling" and the "parent" Gateway SHOULD NOT appear on a "child" Gateway.
+The "child" Gateways MUST provide a status for each Listener defined in their specification. Listeners defined in "sibling" and the "parent" Gateway SHOULD NOT appear on a "child" Gateway.
 
 #### Conditions
 
