Accepted should trigger other conditions to be set to 'False'

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -84,6 +84,8 @@ Failure to attach a "child" Gateway to another MUST result in the "child" Gatewa
 - Attaching to a non-existing Gateway
 - Attaching to a Gateway with a different `GatewayClassName` 
 
+If a Gateway's `Accepted` condition is `False` then the conditions 'Programmed' and 'Ready' (if supported) MUST be set to `False`.
+
 #### Route Attaching
 
 Routes MUST be able to specify a "child" Gateways as a `parentRef` and make use of the fields in `ParentReference` to help target a specific listener.
