Drop parent-gateway label

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -55,8 +55,6 @@ apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
 metadata:
   name: child-gateway
-  labels:
-    gateway.networking.k8s.io/parent-gateway: parent-gateway
 spec:
   gatewayClassName: example
   infrastructure:
@@ -102,12 +100,6 @@ spec:
     sectionName: https
 ```
 
-#### `parent-gateway` label
-
-Implementations MUST label "child" Gateways with the `gateway.networking.k8s.io/parent-gateway` label. The value of the label is the name of the "parent" Gateway and it MUST be equivalent to the value `spec.infrastructure.attachTo.name`
-
-Users MUST NOT be able to edit this field.
-
 #### Merging Spec Fields
 
 
@@ -138,8 +130,6 @@ apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
 metadata:
   name: child-gateway
-  labels:
-    gateway.networking.k8s.io/parent-gateway: parent-gateway
 spec:
   gatewayClassName: example
   infrastructure:
@@ -194,8 +184,6 @@ apiVersion: gateway.networking.k8s.io/v1beta1
 kind: GatewayListener
 metadata:
   name: listener
-  labels:
-    gateway.networking.k8s.io/parent-gateway: parent-gateway
 spec:
   gateway: parent-gateway
   listeners:
@@ -207,7 +195,7 @@ status: ...
 
 #### Use of the `gateway.networking.k8s.io/parent-gateway` label
 
-Use of the label could be used to select child gateways vs using `spec.infrastructure.attachTo`
+Use of a label (ie. `gateway.networking.k8s.io/parent-gateway: name`) could be used to select child gateways vs using `spec.infrastructure.attachTo`
 
 ## References
 Mentioned in Prior GEPs:
