add clause that child listeners should not appear on the parent

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -161,6 +161,7 @@ The list of `Addresses` that appear in the status of the "child" Gateway MUST be
 #### Listeners
 
 The "child" Gateways MUST provide a status for each Listener defined in their specification. Listeners defined in "sibling" and the "parent" Gateway SHOULD NOT appear on a "child" Gateway.
+Listeners in "child" Gateways SHOULD NOT appear on the "parent" Gateway.
 
 #### Conditions
 
