update example of attaching to a child gateway

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -96,8 +96,8 @@ metadata:
   name: httproute-example
 spec:
   parentRefs:
-  - name: acme-lb
-    sectionName: https
+  - name: child-gateway
+    sectionName: metrics
 ```
 
 #### Merging Spec Fields
