adjust invalid scenarios and allow for rejection via webhook

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -75,14 +75,17 @@ spec:
 
 Gateways that _do not_ reference another Gateway (using `spec.infrastructure.attachTo`) are considered "primary" Gateways. A "child" Gateway is one where `spec.infrastructure.attachTo` field is set to a "primary" Gateway. A "sibling" is a Gateway that shares a "parent" with another "child" Gateway.
 
+Failure to attach a "child" Gateway to another MUST result in the "child" Gateway setting their `Accepted` condition to `False`.
 
-Failure to attach a "child" Gateway to another MUST result in the "child" Gateway setting their `Accepted` condition to `False`. This MUST happen in the following scenarios:
-- Attaching to another "child" Gateway
-- Attaching to oneself (self-referential)
+This MUST happen in the following scenarios:
 - Attaching to a non-existing Gateway
-- Attaching to a Gateway with a different `GatewayClassName` 
 
 If a Gateway's `Accepted` condition is `False` then the conditions 'Programmed' and 'Ready' (if supported) MUST be set to `False`.
+
+Invalid Gateways MUST be rejected by the implementation during creation or update. This MUST happen in the following scenarios:
+- Attaching to another "child" Gateway
+- Attaching to oneself (self-referential)
+- Attaching to a Gateway with a different `GatewayClassName`
 
 #### Route Attaching
 
