flush out listener precedence and conflict semantics

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -148,6 +148,16 @@ spec:
 
 With this configuration, the realized "primary" Gateway should listen on port `80` and `8080`.
 
+##### Listener Precendence
+
+Gateway Listeners should be merged using the following precedence:
+- "primary" Gateway
+- "child" Gateway ordered by creation time (oldest first)
+- "child" Gateway ordered alphabetical by “{namespace}/{name}”.
+
+##### Listener Conflict
+
+A "child" Gateway's listener status MUST set the condition `Conflicted` to `True` if it unable to merge with a "parent" Gateway.
 
 #### Addresses
 
