fix header indentation

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -70,7 +70,6 @@ spec:
 
 ### Semantics
 
-
 #### Gateway Attaching
 
 Gateways that _do not_ reference another Gateway (using `spec.infrastructure.attachTo`) are considered "primary" Gateways. A "child" Gateway is one where `spec.infrastructure.attachTo` field is set to a "primary" Gateway. A "sibling" is a Gateway that shares a "parent" with another "child" Gateway.
@@ -105,12 +104,11 @@ spec:
 
 #### Merging Spec Fields
 
-
-#### GatewayClassName 
+##### GatewayClassName
 
 The `GatewayClassName` MUST be set on "child" and "primary" Gateways and be equivalent.
 
-#### Listeners
+##### Listeners
 
 Implementations MUST treat the "primary" Gateway as having the concatenated list of all listeners from "child" Gateways.
 
@@ -148,18 +146,18 @@ spec:
 
 With this configuration, the realized "primary" Gateway should listen on port `80` and `8080`.
 
-##### Listener Precendence
+###### Listener Precendence
 
 Gateway Listeners should be merged using the following precedence:
 - "primary" Gateway
 - "child" Gateway ordered by creation time (oldest first)
 - "child" Gateway ordered alphabetical by “{namespace}/{name}”.
 
-##### Listener Conflict
+###### Listener Conflict
 
 A "child" Gateway's listener status MUST set the condition `Conflicted` to `True` if it unable to merge with a "parent" Gateway.
 
-#### Addresses
+##### Addresses
 
 Merging `Addresses` is not supported and the "child" Gateway's `Addresses` MUST be empty.
 
