define parent gateway and update correct usage of primary vs parent

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -72,7 +72,7 @@ spec:
 
 #### Gateway Attaching
 
-Gateways that _do not_ reference another Gateway (using `spec.infrastructure.attachTo`) are considered "primary" Gateways. A "child" Gateway is one where `spec.infrastructure.attachTo` field is set to a "primary" Gateway. A "sibling" is a Gateway that shares a "parent" with another "child" Gateway. A "child" Gateway can only attach to Gateways in the same namespace.
+Gateways that _do not_ reference another Gateway (using `spec.infrastructure.attachTo`) are considered "primary" Gateways. A "child" Gateway is one where `spec.infrastructure.attachTo` field is set to a "primary" Gateway - making the "primary" Gateway a "parent". A "sibling" is a Gateway that shares a "parent" with another "child" Gateway. A "child" Gateway can only attach to Gateways in the same namespace.
 
 Failure to attach a "child" Gateway to another MUST result in the "child" Gateway setting their `Accepted` condition to `False`.
 
@@ -106,11 +106,11 @@ spec:
 
 ##### GatewayClassName
 
-The `GatewayClassName` MUST be set on "child" and "primary" Gateways and be equivalent.
+The `GatewayClassName` MUST be set on "child" and "parent" Gateways and be equivalent.
 
 ##### Listeners
 
-Implementations MUST treat the "primary" Gateway as having the concatenated list of all listeners from "child" Gateways.
+Implementations MUST treat the "parent" Gateway as having the concatenated list of all listeners from itself and "child" Gateways.
 
 Validation of this list of listeners is subject to the discussion here: https://github.com/kubernetes-sigs/gateway-api/issues/1842
 
@@ -149,13 +149,13 @@ With this configuration, the realized "primary" Gateway should listen on port `8
 ###### Listener Precendence
 
 Gateway Listeners should be merged using the following precedence:
-- "primary" Gateway
+- "parent" Gateway
 - "child" Gateway ordered by creation time (oldest first)
 - "child" Gateway ordered alphabetical by “{namespace}/{name}”.
 
 ###### Listener Conflict
 
-A "child" Gateway's listener status MUST set the condition `Conflicted` to `True` if it unable to merge with a "parent" Gateway.
+A "child" Gateway's listener status MUST set the condition `Conflicted` to `True` if it unable to merge with a "primary" Gateway.
 
 ##### Addresses
 
