Define validation semantics on the concatenated list of listeners
tl;dr - it's the same as if the listeners were part of a single Gateway

--- a/geps/gep-1713.md
+++ b/geps/gep-1713.md
@@ -112,7 +112,7 @@ The `GatewayClassName` MUST be set on "child" and "parent" Gateways and be equiv
 
 Implementations MUST treat the "parent" Gateway as having the concatenated list of all listeners from itself and "child" Gateways.
 
-Validation of this list of listeners is subject to the discussion here: https://github.com/kubernetes-sigs/gateway-api/issues/1842
+Validation of this list of listeners MUST behave the same as if the list were part of a single "parent" Gateway.
 
 eg.
 ```yaml
