--- a/geps/gep-1856.md
+++ b/geps/gep-1856.md
@@ -1,7 +1,7 @@
 # GEP 1856: Egress
 Issue: [#1856](https://github.com/kubernetes-sigs/gateway-api/issues/1856)
 
-Status: Provisional
+Status: Withdrawn
 
 ## TLDR
 Egress traffic is any traffic that originates inside a Kubernetes cluster that is bound for an endpoint outside of the cluster. Egress Traffic in Kubernetes is a common use case for Service Providers to provision outbound traffic that requires a Gateway resource to provide Source Network Address Translation (SNAT) capabilities.
