update Portability Proposal Alternatives

--- a/geps/gep-2694.md
+++ b/geps/gep-2694.md
@@ -5,7 +5,7 @@
 
 ## TLDR
 
-This GEP proposes adding regex support for path redirects and rewrites.
+This GEP proposes adding regex support for path **redirects and rewrites**.
 
 ## Goals
 
@@ -19,12 +19,22 @@ to find a more commonly supported regex and establish a specification.
 * Path redirects
 * Host rewrites
 
+### Proposal
+
+If there's a regex type that needs to be chosen eventually, RE2 is more appropriate.
+Although the number of gateway APIs supporting RE2 and PCRE are similar when looking over them
+at the moment, there are much more compelling reasons for RE2 to be used.
+
+* Kubernetes only accept expressions in ingress that comply with the RE2 engine syntax.
+* RE2 syntax is a subset of that accepted by PCRE. This means that the syntax of RE2 can be parsed by the PCRE.
+
 ### Path Modifiers
 
 Both redirects and rewrites would share the same `PathModifier` types:
 
 ```go
-// HTTPPathModifierType defines the type of path redirect.
+
+// HTTPPathModifierType defines the type of path redirect or rewrite.
 type HTTPPathModifierType string
 
 const (
@@ -48,7 +58,7 @@ type HTTPPathModifier struct {
   // the resulting path. For example, a request to ReplacePrefixMatch "/foo/bar"
   // with a prefix match of "/foo" would be modified to "/bar".
   // the path `/foo/bar/baz` with a RegularExpression match of `/foo/(.*)/baz`,
-  // the `bar` will be replaced with other.
+  // the `bar` will be replaced with others.
   //
   // +kubebuilder:validation:MaxLength=1024
   Substitution string `json:"substitution"`
@@ -59,42 +69,27 @@ type HTTPPathModifier struct {
 
 Different gateway APIs support different regexes, we need to find a widely supported regex.
 
-### Envoy
-Envoy supports the following relevant capabilities
-
-* RE2 ([reference](https://www.envoyproxy.io/docs/envoy/latest/api-v3/type/matcher/v3/regex.proto))
-* Hyperscan ([reference](https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/matching/input_matchers/hyperscan/v3alpha/hyperscan.proto.html))
-
-### Google Cloud
-Google Cloud URL Maps support the following relevant capabilities
-
-* RE2 ([reference](https://github.com/google/re2/wiki/Syntax))
-
-### HAProxy
-HAProxy supports the following relevant capabilities
-
-* PCRE ([reference](https://www.haproxy.com/documentation/haproxy-configuration-tutorials/http-rewrites/#rewriting-anywhere-in-the-request-using-regexes))
-
-### NGINX
-The NGINX rewrite module contains the following relevant capabilities
-
-* PCRE ([reference](http://nginx.org/en/docs/http/ngx_http_rewrite_module.html))
-
-### KONG
-
-* PCRE ([reference](https://discuss.konghq.com/t/a-few-words-on-regex-uris-usage-and-common-pitfalls/506))
+| Gateway APIs         | Regex |
+|----------------------|-------|
+| Istio                | RE2   |
+| Google Cloud         | RE2   |
+| Cilium               | RE2   |
+| Envoy Gateway        | RE2   |
+| Contour              | RE2   |
+| Emissary Ingress     | RE2   |
+| Gloo Edge            | RE2   |
+| Hashicorp Consul     | RE2   |
+| Kuma                 | RE2   |
+| HAProxy              | PCRE  |
+| NGINX                | PCRE  |
+| KONG                 | PCRE  |
+| Traefik              | PCRE  |
+| HAProxy Ingress      | PCRE  |
+| Flomesh Service Mesh | Perl  |
+| Litespeed            | Perl  |
 
 ## Alternatives
 
-### 1. Why RE2
-If there's a regex type that needs to be chosen eventually, RE2 is more appropriate.
-Although the number of gateway APIs supporting RE2 and PCRE are similar when looking over them
-at the moment, there are much more compelling reasons for RE2 to be used.
-
-* Kubernetes only accept expressions in ingress that comply with the RE2 engine syntax.
-* RE2 syntax is a subset of that accepted by PCRE. This means that the syntax of RE2 can be parsed by the PCRE.
-
-### 2. Regex Compatibility
 In the realm of regex, there is no way to perfectly unify regex specific implementations from
 what is available. According to the existing way of handling, a better solution is to let users
 decide their own implementation, and not to make restrictions at the API level. For a more
