--- a/site-src/implementations/v1.0.md
+++ b/site-src/implementations/v1.0.md
@@ -31,7 +31,9 @@ Implementations only appear in this page if they pass Core conformance for the r
 | projectcontour  | contour                            | v1.28.2       | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:      | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :x:                      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        |
 | projectcontour  | contour                            | v1.28.3       | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:      | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :x:                      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        |
 | projectcontour  | contour                            | v1.28.4       | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:      | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :x:                      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        |
+| projectcontour  | contour                            | v1.28.5       | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:      | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :x:                      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        |
 | projectcontour  | contour                            | v1.29.0       | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:      | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :x:                      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        |
+| projectcontour  | contour                            | v1.29.1       | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :white_check_mark:        | :white_check_mark:      | :white_check_mark:      | :white_check_mark:     | :white_check_mark:        | :white_check_mark:     | :x:                      | :white_check_mark:       | :white_check_mark:                | :white_check_mark:        |
 | solo.io         | gloo-gateway                       | v2.0.0-beta1  | :white_check_mark:        | :white_check_mark:            | :white_check_mark:                    | :x:                       | :white_check_mark:      | :white_check_mark:      | :x:                    | :white_check_mark:        | :x:                    | :x:                      | :x:                      | :x:                               | :x:                       |
 
 ## Mesh Profile
