update gateway apis regex and add refer

--- a/geps/gep-2694.md
+++ b/geps/gep-2694.md
@@ -9,12 +9,11 @@ This GEP proposes adding regex support for path **redirects and rewrites**.
 
 ## Goals
 
-* Replace with a Regular Expression substitution
+* Enable replacements with a [Regular Expression] substitution
 
 ## API
 
-Although not all gateway APIs support the same regex, it is important
-to find a more commonly supported regex and establish a specification.
+Although not all Gateway API implementations support the same regex engines, it is important to find a more commonly supported regex and establish a specification.
 
 * Path redirects
 * Host rewrites
@@ -69,24 +68,24 @@ type HTTPPathModifier struct {
 
 Different gateway APIs support different regexes, we need to find a widely supported regex.
 
-| Gateway APIs         | Regex |
-|----------------------|-------|
-| Istio                | RE2   |
-| Google Cloud         | RE2   |
-| Cilium               | RE2   |
-| Envoy Gateway        | RE2   |
-| Contour              | RE2   |
-| Emissary Ingress     | RE2   |
-| Gloo Edge            | RE2   |
-| Hashicorp Consul     | RE2   |
-| Kuma                 | RE2   |
-| HAProxy              | PCRE  |
-| NGINX                | PCRE  |
-| KONG                 | PCRE  |
-| Traefik              | PCRE  |
-| HAProxy Ingress      | PCRE  |
-| Flomesh Service Mesh | Perl  |
-| Litespeed            | Perl  |
+| Gateway APIs         | Regex                                                                                                                          |
+|----------------------|--------------------------------------------------------------------------------------------------------------------------------|
+| Istio                | [RE2](https://istio.io/latest/docs/reference/config/networking/virtual-service/#HTTPMatchRequest)                              |
+| Google Cloud         | [RE2](https://cloud.google.com/api-gateway/docs/path-templating)                                                               |
+| Cilium               | [RE2](https://github.com/cilium/cilium/blob/69ee9e95a5fd9059605893219b59ccf7297d49c5/api/v1/flow/README.md?plain=1#L348)       |
+| Envoy Gateway        | [RE2](https://www.envoyproxy.io/docs/envoy/latest/api-v3/type/matcher/v3/regex.proto)                                          |
+| Contour              | [RE2](https://github.com/projectcontour/contour#overview)                                                                      |
+| Emissary Ingress     | [RE2](https://github.com/emissary-ingress/emissary/blob/master/CHANGELOG.md#300-june-27-2022)                                  |
+| Gloo Edge            | [RE2](https://docs.solo.io/gloo-edge/latest/guides/traffic_management/request_processing/regex_rewrite/)                       |
+| Hashicorp Consul     | [RE2](https://developer.hashicorp.com/terraform/language/functions/regex)                                                      |
+| Kuma                 | [RE2](https://kuma.io/docs/2.8.x/policies/traffic-metrics/#filter-envoy-metrics)                                               |
+| Flomesh Service Mesh | [RE2](https://github.com/flomesh-io/fsm/blob/2d0e40b4a04431b1518a9d4f388b5363cef524be/docs/how_fsm_uses_envoy.md?plain=1#L180) |
+| HAProxy              | [PCRE](https://discourse.haproxy.org/t/documentation-about-regex-syntax/2019/3)                                                |
+| NGINX                | [PCRE](https://www.f5.com/company/blog/nginx/regular-expression-tester-nginx)                                                  |
+| KONG                 | [PCRE](https://docs.konghq.com/gateway/latest/key-concepts/routes/#regular-expressions)                                        |
+| HAProxy              | [PCRE](https://discourse.haproxy.org/t/documentation-about-regex-syntax/2019/3)                                                |
+| Litespeed            | [PCRE](https://docs.litespeedtech.com/cloud/kubernetes/gateway/#extended-gateway-features)                                     |
+| Traefik              | [REGEXP](https://github.com/search?q=repo%3Atraefik%2Ftraefik+regexp&type=code)                                                |
 
 ## Alternatives
 
